--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,12 +44,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // For In-App Purchases, Subscriptions etc.
-    implementation 'com.android.billingclient:billing:4.0.0'
-
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
 
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
+
+    // For In-App Purchases, Subscriptions etc. (noinspection GradleDependency)
+    implementation 'com.android.billingclient:billing:4.0.0'
+
+    def volley_version = "1.2.1"
+    implementation "com.android.volley:volley:$volley_version"
 }
