--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
 
     def volley_version = "1.2.1"
     implementation "com.android.volley:volley:$volley_version"
+
+    // For AdMob
+    implementation 'com.google.android.gms:play-services-ads:21.3.0'
 }
