--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/SplashTheme"
         tools:targetApi="31">
+        <!-- Actual Admob App Id: ca-app-pub-4247468904518611~4146100008 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-4247468904518611~4146100008" />
         <activity
             android:name=".IntroActivity"
             android:exported="true"
