--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
 
     // For AdMob
     implementation 'com.google.android.gms:play-services-ads:21.3.0'
+
+    // For Lottie Animations
+    implementation "com.airbnb.android:lottie:5.2.0"
 }
