--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // For Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
 
