--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,15 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
+    // For GSon
+    implementation 'com.google.code.gson:gson:2.9.1'
+
+    // For Lottie Animations
+    implementation "com.airbnb.android:lottie:5.2.0"
+
+    // For Volley
+    implementation "com.android.volley:volley:1.2.1"
+
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
 
@@ -57,13 +66,6 @@ dependencies {
     // For In-App Purchases, Subscriptions etc. (noinspection GradleDependency)
     implementation 'com.android.billingclient:billing:4.0.0'
 
-    // For Volley
-    def volley_version = "1.2.1"
-    implementation "com.android.volley:volley:$volley_version"
-
     // For AdMob
     implementation 'com.google.android.gms:play-services-ads:21.3.0'
-
-    // For Lottie Animations
-    implementation "com.airbnb.android:lottie:5.2.0"
 }
