--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,9 +59,6 @@ dependencies {
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
 
-    // For Firebase Admin dependency
-    implementation 'com.google.firebase:firebase-admin:9.1.0'
-
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
 
@@ -70,4 +67,10 @@ dependencies {
 
     // For AdMob
     implementation 'com.google.android.gms:play-services-ads:21.3.0'
+
+    // For Implementing App Open Ad
+    implementation "androidx.lifecycle:lifecycle-process:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-runtime:2.5.1"
+        // noinspection LifecycleAnnotationProcessorWithJava8
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.5.1"
 }
