--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,8 @@ dependencies {
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
 
-    // For In-App Purchases, Subscriptions etc. (noinspection GradleDependency)
-    implementation 'com.android.billingclient:billing:4.0.0'
+    // For In-App Purchases, Subscriptions etc.
+    implementation 'com.android.billingclient:billing:5.1.0'
 
     // For AdMob
     implementation 'com.google.android.gms:play-services-ads:21.3.0'
