--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,7 @@ dependencies {
 
     // For Google Play Games Services (GPGS)
     implementation "com.google.android.gms:play-services-games-v2:17.0.0"
+
+    // In-app updates dependency
+    implementation 'com.google.android.play:app-update:2.0.1'
 }
