--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
 
     // In-app updates dependency
     implementation 'com.google.android.play:app-update:2.0.1'
+
+    // In-app reviews dependency
+    implementation 'com.google.android.play:review:2.0.1'
 }
